<resources>
    <string name="app_name">Douglas OHI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Douglas OHI LLC</string>
    <string name="nav_header_subtitle">info@douglasohi.com</string>
    <string name="nav_header_subtitle_ph">+968 24590540</string>
    <string name="nav_header_desc">Douglas OHI provide a fully integrated engineering solution, from initial design and procurement to the build and aftercare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_website">WebsiteActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>

    <string name="menu1">Website</string>
    <string name="menu2">Feedback</string>
    <string name="menu3">Twitter</string>
    <string name="menu4">LinkedIn</string>
    <string name="menu5">Instagram</string>
</resources>
